--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{BUSINESS_NAME}} — Friendly dentist in {{CITY}}" />
     <meta property="og:description" content="Compassionate dental care in {{CITY}}. Same-week appointments, modern treatments, and a team that makes you comfortable." />
+    <meta property="og:url" content="https://yourdomain.com" />
     <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
     
     <!-- Twitter -->
